# git-auto-logger

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
