[package]
name = "git_auto_logger"
version = "0.1.0"
edition = "2021"
author = "Pedro Soares"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"

# make dev optimsation 3
[profile.dev]
opt-level = 3
